--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "create-admin": "tsx scripts/create-admin.ts",
+
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "docker:reset": "docker-compose down -v && docker-compose up -d",
     "wait-for-db": "tsx scripts/wait-for-db.ts",
-    "setup": "npm run docker:up && npm run wait-for-db && npm run db:push && npm run create-admin"
+    "setup": "npm run docker:up && npm run wait-for-db && npm run db:push"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -90,6 +90,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
